k8s/meetx-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meetx-db
  namespace: meetx
spec:
  selector:
    matchLabels:
      app: meetx-db
  template:
    metadata:
      labels:
        app: meetx-db
    spec:
      containers:
      - name: meetx-db
        image: postgres:13.2-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: meetx-db
  namespace: meetx
spec:
  selector:
    app: meetx-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
