k8s/server-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-auth
  namespace: meetx
spec:
  selector:
    matchLabels:
      app: server-auth
  template:
    metadata:
      labels:
        app: server-auth
    spec:
      containers:
      - name: server-auth
        image: meetx-server-auth:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: server-auth
  namespace: meetx
spec:
  type: LoadBalancer
  selector:
    app: server-auth
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
