k8s/server-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dotnet
  namespace: meetx
spec:
  selector:
    matchLabels:
      app: server-dotnet
  template:
    metadata:
      labels:
        app: server-dotnet
    spec:
      containers:
      - name: server-dotnet
        image: meetx-server-dotnet:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: dotnet-files
          mountPath: /app/wwwroot
      volumes:
      - name: dotnet-files
        persistentVolumeClaim:
          claimName: dotnet-files-claim
---
apiVersion: v1
kind: Service
metadata:
  name: server-dotnet
  namespace: meetx
spec:
  type: ClusterIP
  selector:
    app: server-dotnet
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
